# python-demo-cli

./: .gitignore  README.md  a.csv  benchmark.txt  benchmarking.py  create_graph.ipynb  mp.py  pyproject.toml  reading.py  test.cc
benchmark_results/: benchmark.txt  benchmark_results.json  create_graph.ipynb
demo/benchmarking/: v1.py  v2.py  v3.py
demo/reading/: v1.py  v2.py
src/benchmarking/: v1.py  v3.py
src/reading/: v2.py  v3.py
