[tool.poetry]
name = "toy-cli"
version = "0.1.0"
description = ""
authors = ["vsingh18567 <vsingh18567@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.5"
numpy = "^2.1.1"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
